added new shared models results

--- a/activity/analyse_results.ipynb
+++ b/activity/analyse_results.ipynb
@@ -14,12 +14,14 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import pickle\n",
-    "from ggplot import *"
+    "from ggplot import *\n",
+    "from collections import OrderedDict\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +48,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_best(file):\n",
+    "    history = get_df(file)\n",
+    "    best = pd.DataFrame()\n",
+    "    for idx, df_select in history.groupby(level=[0]):\n",
+    "        best_n_hidden_index = df_select[\"val_acc\"].idxmax()\n",
+    "        best_n_hidden = df_select.loc[best_n_hidden_index]\n",
+    "        best_n_hidden[\"epoch\"] = best_n_hidden_index[1]\n",
+    "        best_n_hidden[\"n_epochs\"] = len(df_select)\n",
+    "        best = best.append(best_n_hidden)\n",
+    "    best = best.reset_index()\n",
+    "    best[\"epoch\"] = best[\"epoch\"].astype(np.int8)\n",
+    "    best[\"n_epochs\"] = best[\"n_epochs\"].astype(np.int8)\n",
+    "    del best[\"index\"]\n",
+    "    best = pd.DataFrame(OrderedDict([(\"n_hidden\", best[\"n_hidden\"]),\n",
+    "                                     (\"epoch\", best[\"epoch\"]),\n",
+    "                                     (\"n_epochs\", best[\"n_epochs\"]),\n",
+    "                                     (\"loss\", best[\"loss\"]),\n",
+    "                                     (\"val_loss\", best[\"val_loss\"]),\n",
+    "                                     (\"acc\", best[\"acc\"]),\n",
+    "                                     (\"val_acc\", best[\"val_acc\"])]))\n",
+    "    return best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -59,8 +92,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>epoch</th>\n",
        "      <th>n_hidden</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>n_epochs</th>\n",
        "      <th>loss</th>\n",
        "      <th>val_loss</th>\n",
        "      <th>acc</th>\n",
@@ -70,8 +104,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29</td>\n",
        "      <td>16</td>\n",
+       "      <td>29</td>\n",
+       "      <td>30</td>\n",
        "      <td>0.313078</td>\n",
        "      <td>0.326423</td>\n",
        "      <td>0.857953</td>\n",
@@ -79,17 +114,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>29</td>\n",
        "      <td>32</td>\n",
-       "      <td>0.267471</td>\n",
-       "      <td>0.316537</td>\n",
-       "      <td>0.884800</td>\n",
-       "      <td>0.863042</td>\n",
+       "      <td>28</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.269232</td>\n",
+       "      <td>0.316270</td>\n",
+       "      <td>0.883827</td>\n",
+       "      <td>0.863782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>14</td>\n",
        "      <td>64</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
        "      <td>0.253726</td>\n",
        "      <td>0.318738</td>\n",
        "      <td>0.892474</td>\n",
@@ -97,8 +134,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10</td>\n",
        "      <td>128</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
        "      <td>0.223962</td>\n",
        "      <td>0.326513</td>\n",
        "      <td>0.907087</td>\n",
@@ -109,14 +147,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   epoch n_hidden      loss  val_loss       acc   val_acc\n",
-       "0     29       16  0.313078  0.326423  0.857953  0.852975\n",
-       "1     29       32  0.267471  0.316537  0.884800  0.863042\n",
-       "2     14       64  0.253726  0.318738  0.892474  0.862669\n",
-       "3     10      128  0.223962  0.326513  0.907087  0.865635"
+       "  n_hidden  epoch  n_epochs      loss  val_loss       acc   val_acc\n",
+       "0       16     29        30  0.313078  0.326423  0.857953  0.852975\n",
+       "1       32     28        30  0.269232  0.316270  0.883827  0.863782\n",
+       "2       64     14        15  0.253726  0.318738  0.892474  0.862669\n",
+       "3      128     10        11  0.223962  0.326513  0.907087  0.865635"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,19 +162,13 @@
    "source": [
     "# seq ... sequential model (GRU-GRU-Dense)\n",
     "history_seq_file = \"results/activity_model-117k-grid-150_smiles/activity-model-117k-70_30_train_test-150_smiles-history-{}_hidden.pickle\"\n",
-    "history_seq = get_df(history_seq_file)\n",
-    "best_seq = pd.DataFrame()\n",
-    "for idx, df_select in history_seq.groupby(level=[0]):\n",
-    "    best_seq = best_seq.append(df_select.tail(1))\n",
-    "best_seq = best_seq.reset_index()\n",
-    "del best_seq[\"level_0\"]\n",
-    "best_seq.columns.values[0] = \"epoch\"\n",
+    "best_seq = get_best(history_seq_file)\n",
     "best_seq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -150,8 +182,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>epoch</th>\n",
        "      <th>n_hidden</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>n_epochs</th>\n",
        "      <th>loss</th>\n",
        "      <th>val_loss</th>\n",
        "      <th>acc</th>\n",
@@ -161,73 +194,160 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29</td>\n",
        "      <td>16</td>\n",
-       "      <td>0.343194</td>\n",
-       "      <td>0.348635</td>\n",
-       "      <td>0.841471</td>\n",
-       "      <td>0.839336</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.342068</td>\n",
+       "      <td>0.365419</td>\n",
+       "      <td>0.841689</td>\n",
+       "      <td>0.830204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>29</td>\n",
        "      <td>32</td>\n",
-       "      <td>0.314258</td>\n",
-       "      <td>0.338042</td>\n",
-       "      <td>0.859846</td>\n",
-       "      <td>0.847976</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.329517</td>\n",
+       "      <td>0.380016</td>\n",
+       "      <td>0.852216</td>\n",
+       "      <td>0.831199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20</td>\n",
        "      <td>64</td>\n",
-       "      <td>0.280100</td>\n",
-       "      <td>0.324888</td>\n",
-       "      <td>0.878336</td>\n",
-       "      <td>0.858701</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.353607</td>\n",
+       "      <td>0.376347</td>\n",
+       "      <td>0.838079</td>\n",
+       "      <td>0.824623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>14</td>\n",
        "      <td>128</td>\n",
-       "      <td>0.254224</td>\n",
-       "      <td>0.325103</td>\n",
-       "      <td>0.890800</td>\n",
-       "      <td>0.861288</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.266837</td>\n",
+       "      <td>0.506233</td>\n",
+       "      <td>0.894161</td>\n",
+       "      <td>0.786154</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   epoch n_hidden      loss  val_loss       acc   val_acc\n",
-       "0     29       16  0.343194  0.348635  0.841471  0.839336\n",
-       "1     29       32  0.314258  0.338042  0.859846  0.847976\n",
-       "2     20       64  0.280100  0.324888  0.878336  0.858701\n",
-       "3     14      128  0.254224  0.325103  0.890800  0.861288"
+       "  n_hidden  epoch  n_epochs      loss  val_loss       acc   val_acc\n",
+       "0       16     11        16  0.342068  0.365419  0.841689  0.830204\n",
+       "1       32     10        14  0.329517  0.380016  0.852216  0.831199\n",
+       "2       64      5        10  0.353607  0.376347  0.838079  0.824623\n",
+       "3      128      3         5  0.266837  0.506233  0.894161  0.786154"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# shared ... shared model ([GRU-GRU-GRU]-Dense)\n",
-    "history_shared_file = \"results/activity_model-3_shared-117k-grid-150_smiles/activity_model-3_shared-117k-grid-150_smiles-history-{}_hidden.pickle\"\n",
-    "history_shared = get_df(history_shared_file)\n",
-    "best_shared = pd.DataFrame()\n",
-    "for idx, df_select in history_shared.groupby(level=[0]):\n",
-    "    best_shared = best_shared.append(df_select.tail(1))\n",
-    "best_shared = best_shared.reset_index()\n",
-    "del best_shared[\"level_0\"]\n",
-    "best_shared.columns.values[0] = \"epoch\"\n",
-    "best_shared"
+    "# shared_a ... shared model (GRU-GRU-GRU)-Merge-GRU-Dense\n",
+    "history_shared_a_file = \"results/activity_model-3_shared_a-117k-grid-50_smiles/activity_model-3_shared_a-117k-grid-50_smiles-history-{}_hidden.pickle\"\n",
+    "best_shared_a = get_best(history_shared_a_file)\n",
+    "best_shared_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n_hidden</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>n_epochs</th>\n",
+       "      <th>loss</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>acc</th>\n",
+       "      <th>val_acc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.341188</td>\n",
+       "      <td>0.356912</td>\n",
+       "      <td>0.845425</td>\n",
+       "      <td>0.837527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.333089</td>\n",
+       "      <td>0.372710</td>\n",
+       "      <td>0.850959</td>\n",
+       "      <td>0.831909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.332656</td>\n",
+       "      <td>0.400454</td>\n",
+       "      <td>0.851980</td>\n",
+       "      <td>0.812285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>128</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.343461</td>\n",
+       "      <td>0.437523</td>\n",
+       "      <td>0.846333</td>\n",
+       "      <td>0.798610</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  n_hidden  epoch  n_epochs      loss  val_loss       acc   val_acc\n",
+       "0       16     22        27  0.341188  0.356912  0.845425  0.837527\n",
+       "1       32      9        14  0.333089  0.372710  0.850959  0.831909\n",
+       "2       64      3        10  0.332656  0.400454  0.851980  0.812285\n",
+       "3      128      1         5  0.343461  0.437523  0.846333  0.798610"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# shared_b ... shared model (GRU-GRU-GRU)-(GRU-GRU-GRU)-Merge-Dense\n",
+    "history_shared_b_file = \"results/activity_model-3_shared_b-117k-grid-50_smiles/activity_model-3_shared_b-117k-grid-50_smiles-history-{}_hidden.pickle\"\n",
+    "best_shared_b = get_best(history_shared_b_file)\n",
+    "best_shared_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -241,11 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfig, ax = plt.subplots(1, 4, figsize=(8, 8))\\ng = ggplot(history_seq, aes(x=\"loss\", y=\"val_loss\", color=\"n_hidden\")) +         geom_line(size=2.0) +         xlab(\"loss\") +         ylab(\"val_loss\") +         ggtitle(\"loss vs. validation loss | sequential model\")\\ng\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "fig, ax = plt.subplots(1, 4, figsize=(8, 8))\n",
@@ -265,9 +396,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -280,7 +409,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
